deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp3-deployment

spec:
  replicas: 3
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      name: myaap3-pod
      labels:
        app: myapp
    spec:
      containers:
        - name: myapp3-container
          image: stacksimplify/kubenginx:3.0.0
          ports:
            - containerPort: 80
