myapp3.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp3-service
spec:
  selector:
    app: 
  ports:
  - port: 3306
  clusterIP: None
