nginxapp1-service.yml
apiVersion: v1
kind: Service
metadata:
  name: app1-nginx-service
spec:
  type: ClusterIP
  selector:
    app: app1-nginx
  ports:
  - port: 80
    targetPort: 80
